fix overflow-x

--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -7,7 +7,7 @@
     align-items: center;
     /* padding: 2rem; */
 
-    width: 100vw; 
+    /*width: 100vw; */
 }
 
 .login__section .login__container{
